--- a/index.html
+++ b/index.html
@@ -1,15 +1,94 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Angela's Portfolio</title>
+  <link rel="stylesheet" href="path/to/bootstrap/css/bootstrap.min.css">
+  <style>
+    /* Customize the font and colors */
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+    }
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+    /* Style the h1 */
+    h1 {
+      font-size: 36px;
+      text-align: center;
+      margin: 40px 0;
+      text-shadow: 2px 2px 2px #ccc;
+    }
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+    /* Style the h2 */
+    h2 {
+      font-size: 24px;
+      text-align: center;
+      margin: 20px 0;
+      font-weight: normal;
+    }
 
-<!-- TODO 4: Add titles/subtitles etc. -->
+    /* Style the hr */
+    hr {
+      border: none;
+      height: 2px;
+      /* Add a gradient effect */
+      background: linear-gradient(to right, #eee, #333, #eee);
+      margin: 40px 0;
+    }
 
-<!-- TODO 5: Add a link to the project pages -->
+    /* Style the navigation links */
+    a {
+      display: inline-block;
+      margin: 0 10px;
+      text-decoration: none;
+      color: #666;
+      font-size: 18px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      transition: all ease-in-out 0.2s;
+    }
 
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
+    /* Add hover effect to the navigation links */
+    a:hover {
+      background-color: #333;
+      color: #fff;
+    }
+  </style>
+</head>
+<body>
+  <h1>Angela Yu's Portfolio</h1>
+  <h2>I'm a Web Developer</h2>
+  <hr />
 
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+  <div class="col-sm-6">
+    <!-- Movie Ranking Card -->
+    <div class="row-sm-6">
+      <div class="card">
+        <img class="card-img-top" src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview">
+        <div class="card-body">
+          <h3 class="card-title"><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+        </div>
+      </div>
+    </div>
+
+    <!-- Birthday Invite Card -->
+    <div class="row-sm-6">
+      <div class="card">
+        <img class="card-img-top" src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview">
+        <div class="card-body">
+          <h3 class="card-title"><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <hr />
+
+  <a href="./public/about.html">About Me</a>
+  <a href="./public/contact.html">Contact Me</a>
+
+  <script src="path/to/bootstrap/js/bootstrap.min.js"></script>
+</body>
+</html>
