--- a/solution.html
+++ b/solution.html
@@ -1,94 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Angela's Portfolio</title>
-  <link rel="stylesheet" href="path/to/bootstrap/css/bootstrap.min.css">
-  <style>
-    /* Customize the font and colors */
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-
-    /* Style the h1 */
-    h1 {
-      font-size: 36px;
-      text-align: center;
-      margin: 40px 0;
-      text-shadow: 2px 2px 2px #ccc;
-    }
-
-    /* Style the h2 */
-    h2 {
-      font-size: 24px;
-      text-align: center;
-      margin: 20px 0;
-      font-weight: normal;
-    }
-
-    /* Style the hr */
-    hr {
-      border: none;
-      height: 2px;
-      /* Add a gradient effect */
-      background: linear-gradient(to right, #eee, #333, #eee);
-      margin: 40px 0;
-    }
-
-    /* Style the navigation links */
-    a {
-      display: inline-block;
-      margin: 0 10px;
-      text-decoration: none;
-      color: #666;
-      font-size: 18px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      transition: all ease-in-out 0.2s;
-    }
-
-    /* Add hover effect to the navigation links */
-    a:hover {
-      background-color: #333;
-      color: #fff;
-    }
-  </style>
-</head>
-<body>
-  <h1>Angela Yu's Portfolio</h1>
-  <h2>I'm a Web Developer</h2>
-  <hr />
-
-  <div class="col-sm-6">
-    <!-- Movie Ranking Card -->
-    <div class="row-sm-6">
-      <div class="card">
-        <img class="card-img-top" src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview">
-        <div class="card-body">
-          <h3 class="card-title"><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-        </div>
+<html>
+  <head>
+    <title>Project 1</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.17/tailwind.min.css">
+  </head>
+  <body>
+    <header class="bg-gray-900 text-white py-4">
+      <div class="container mx-auto px-4">
+        <h1 class="text-2xl font-bold">My Portfolio</h1>
       </div>
-    </div>
-
-    <!-- Birthday Invite Card -->
-    <div class="row-sm-6">
-      <div class="card">
-        <img class="card-img-top" src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview">
-        <div class="card-body">
-          <h3 class="card-title"><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-        </div>
+    </header>
+    <main class="container mx-auto px-4 py-8">
+      <h2 class="text-xl font-bold mb-4">Project 1</h2>
+      <img src="/images/project1.jpg" class="mb-4">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod libero id nisl laoreet, eget malesuada nisi interdum. Integer a est ligula. Duis euismod eros ac purus convallis, vel varius justo ultrices. Sed tristique nisi vel enim convallis, vel posuere enim pretium. Donec ut tortor ipsum. Nam vel ante quis justo euismod varius vitae id dolor.</p>
+    </main>
+    <footer class="bg-gray-900 py-8">
+      <div class="container mx-auto px-4">
+        <p class="text-gray-400">&copy; 2023 My Portfolio. All rights reserved.</p>
       </div>
-    </div>
-  </div>
-
-  <hr />
-
-  <a href="./public/about.html">About Me</a>
-  <a href="./public/contact.html">Contact Me</a>
-
-  <script src="path/to/bootstrap/js/bootstrap.min.js"></script>
-</body>
+    </footer>
+  </body>
 </html>
