--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <a href="#" class="text-gray-600 hover:text-gray-800">Home</a>
                     </li>
                     <li>
-                        <a href="solution.html" class="text-gray-600 hover:text-gray-800">About</a>
+                        <a href="#" class="text-gray-600 hover:text-gray-800">About</a>
                     </li>
                     <li>
                         <a href="#" class="text-gray-600 hover:text-gray-800">Portfolio</a>
